Add temporary LaTeX files and output to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,17 @@
 # My rules:
 .idea
 *.iml
+# LaTeX files:
 *.tex
+*.log
+*.aux
+*.out
+*.synctex.gz
+*.ps
+*.eps
+*.dvi
+*.pdf
+
 
 # User-specific stuff
 .idea/**/workspace.xml
